# MagicBrain

./: .gitignore  CHANGELOG.md  CHANGELOG_v0.6.1.md  CLAUDE.md  COMMERCIAL_LICENSE.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v0.6.1.md  LICENSE  PHASE1_COMPLETION.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PLATFORM_VISION.md  PROJECT_COMPLETE.md  PROJECT_COMPLETION_REPORT.md  Q2_SPRINT_SUMMARY.md  README.md  RELEASE_NOTES.md  TEAM_REPORT.md  TEAM_SETUP.md  WORK_SESSION_SUMMARY.md  pyproject.toml  textbrain.go  textbrain.js
api/: README_API.md  main.py
api/app/: __init__.py
api/app/api/: main.py
api/app/api/routes/: __init__.py  auto_evolution.py  diagnostics.py  evolution.py  inference.py  models.py  training.py  twins.py
api/app/core/: config.py
api/tests/: conftest.py  test_api.py
docs/: FORMAL_VERIFICATION.md  PATENT_DRAFT_NEUROGENESIS.md  directed_capacity_derivation.tex  hopfield_monotonicity.lean
examples/: quickstart.py
examples/platform/: README.md  basic_usage.py  ensemble_example.py
formal/: MagicBrainFormal.lean  README.md  lakefile.lean
formal/MagicBrainFormal/: Convergence.lean  DeltaE.lean  Glue.lean  Hopfield.lean  SumLemmas.lean
magicbrain/: __init__.py  brain.py  cli.py  genome.py  graph.py  io.py  sampling.py  utils.py
magicbrain/architectures/: __init__.py  hierarchical_brain.py
magicbrain/backends/: __init__.py  backend_interface.py  jax_backend.py  numpy_backend.py
magicbrain/diagnostics/: __init__.py  live_monitor.py  neuronal_dynamics.py  plasticity_tracker.py  synaptic_metrics.py
magicbrain/evolution/: __init__.py  fitness_functions.py  genome_mutator.py  simple_ga.py
magicbrain/hybrid/: __init__.py  base.py  builder.py  cnn_snn.py  snn_dnn.py  snn_transformer.py  spiking_attention.py
magicbrain/integration/: __init__.py  act_backend.py  knowledgebase_client.py  neural_digital_twin.py  redis_twin_store.py
magicbrain/learning_rules/: __init__.py  stdp.py  stdp_brain.py
magicbrain/models/: __init__.py
magicbrain/models/cnn/: __init__.py  vision_model.py
magicbrain/models/dnn/: __init__.py  pytorch_model.py
magicbrain/models/rnn/: __init__.py  recurrent_model.py
magicbrain/models/snn/: __init__.py  text_model.py
magicbrain/models/transformers/: __init__.py  hf_model.py
magicbrain/neurogenesis/: __init__.py  attractor_dynamics.py  compiler.py  cppn.py  development.py  energy.py  genome_v2.py  pattern_memory.py  pipeline.py  reconstruction.py
magicbrain/platform/: README.md  __init__.py  model_interface.py
magicbrain/platform/communication/: __init__.py  converters.py  message.py  message_bus.py
magicbrain/platform/orchestrator/: __init__.py  orchestrator.py
magicbrain/platform/registry/: __init__.py  model_registry.py
magicbrain/tasks/: neurogenesis_task.py  self_repair.py  text_task.py
magicbrain/training/: __init__.py  checkpointing.py  coordinator.py  data_partitioner.py  weight_delta.py  worker.py
magicbrain/zoo/: __init__.py  zoo_manager.py
scripts/: act_learning_curve.py  act_training_trace.csv  capacity_vs_spectral_radius.csv  capacity_vs_spectral_radius.py  directed_scaling.csv  directed_scaling.py  legacy_textbrain.py  magicbrain.py  repair_percolation.py  run_validation_suite.py
tests/: __init__.py  test_backends.py  test_diagnostics.py  test_evolution.py  test_hierarchical.py  test_integration.py  test_io_metadata.py  test_smoke.py  test_stdp.py
tests/hybrid/: test_builder.py  test_hybrid_architectures.py
tests/integration/: __init__.py  test_act_magicbrain.py  test_cognitive_twin.py  test_knowledgebase_api.py
tests/neurogenesis/: test_compiler.py  test_cppn.py  test_development.py  test_energy.py  test_genome_v2.py  test_pattern_memory.py  test_pipeline_v2.py  test_reconstruction.py
tests/platform/: __init__.py  test_async_orchestrator.py  test_communication.py  test_orchestrator.py  test_registry.py  test_snn_adapter.py
tests/training/: test_coordinator.py  test_partitioner.py  test_worker.py
