[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magicbrain"
version = "0.6.0"
description = "Universal platform for heterogeneous and hybrid neural network architectures"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Core SNN functionality
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

# Visualization
viz = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
]

# Platform - PyTorch models (DNN, CNN, RNN)
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

# Platform - Transformers
transformers = [
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
]

# Platform - Full (all model types)
platform = [
    "magicbrain[torch,transformers]",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

# All features
all = [
    "magicbrain[jax,viz,platform,dev]",
]

[project.scripts]
magicbrain = "magicbrain.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
