[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magicbrain"
version = "0.7.1"
description = "Universal platform for heterogeneous and hybrid neural network architectures"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MagicBrain Team", email = "team@studyninja.ru"},
]
keywords = ["spiking-neural-networks", "hopfield-networks", "neurogenesis", "genome-encoding", "formal-verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Core SNN functionality
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

# Visualization
viz = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
]

# Platform - PyTorch models (DNN, CNN, RNN)
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

# Platform - Transformers
transformers = [
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
]

# Platform - Full (all model types)
platform = [
    "magicbrain[torch,transformers]",
]

# Balansis - Absolute Compensation Theory for numerically stable computations
balansis = [
    "balansis>=0.1.0",
]

# MAGIC SDK for human-AI collaboration
magic = [
    "studyninja-magic-sdk>=0.1.0",
]

# API service dependencies
service = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

# All features
all = [
    "magicbrain[jax,viz,platform,balansis,magic,service,dev]",
]

[project.urls]
Homepage = "https://github.com/studyninja/magicbrain"
Repository = "https://github.com/studyninja/magicbrain"
Documentation = "https://github.com/studyninja/magicbrain/tree/main/docs"

[project.scripts]
magicbrain = "magicbrain.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
